testing the commit function

--- a/app/src/main/res/layout/activity_linked_in_data.xml
+++ b/app/src/main/res/layout/activity_linked_in_data.xml
@@ -98,17 +98,14 @@
         android:layout_width="match_parent"
         android:layout_height="10dp" />
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    <ListView
+<ListView
         android:id="@+id/ListView_jobs"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="150dp">
 
     </ListView>
 
-    </ScrollView>
+
 
     <RelativeLayout
         android:layout_width="wrap_content"
