--- a/app/src/main/res/layout/activity_cover__letter__edit.xml
+++ b/app/src/main/res/layout/activity_cover__letter__edit.xml
@@ -22,11 +22,19 @@
 
 
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:gravity="bottom"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Clear"
-            android:id="@+id/button_clearText"/>
+            android:id="@+id/button_clearText"
+            android:padding="@dimen/button_padding"/>
 
         <Button
             android:layout_width="match_parent"
@@ -35,7 +43,11 @@
             android:id="@+id/buttonSaveCoverLetter"
             android:textColor="#ffffff"
             android:backgroundTint="#f79146"
+            android:padding="@dimen/button_padding"
+            android:layout_below="@id/button_clearText"
             />
+
+    </RelativeLayout>
 
 
 
