--- a/app/src/main/res/layout/activity_job__delete.xml
+++ b/app/src/main/res/layout/activity_job__delete.xml
@@ -52,6 +52,7 @@
                 android:text="GO BACK"
                 android:id="@+id/buttonGoBack"
                 android:layout_weight="1"
+                android:padding="@dimen/button_padding"
                 />
 
             <Button
@@ -61,7 +62,8 @@
                 android:id="@+id/buttonSaveJobs"
                 android:layout_weight="1"
                 android:textColor="#ffffff"
-                android:backgroundTint="#f79146"
+                android:backgroundTint="@color/colorOrange"
+                android:padding="@dimen/button_padding"
                 />
         </LinearLayout>
 
