--- a/app/src/main/res/layout/activity_job_add.xml
+++ b/app/src/main/res/layout/activity_job_add.xml
@@ -67,6 +67,7 @@
                 android:text="GO BACK"
                 android:id="@+id/buttonGoBack"
                 android:layout_weight="1"
+                android:padding="@dimen/button_padding"
                 />
 
             <Button
@@ -77,6 +78,7 @@
                 android:layout_weight="1"
                 android:textColor="#ffffff"
                 android:backgroundTint="#f79146"
+                android:padding="@dimen/button_padding"
                 />
         </LinearLayout>
 
