--- a/app/src/main/res/layout/activity_linked_in_data.xml
+++ b/app/src/main/res/layout/activity_linked_in_data.xml
@@ -98,22 +98,22 @@
         android:layout_width="match_parent"
         android:layout_height="10dp" />
 
-<ListView
+    <ListView
         android:id="@+id/ListView_jobs"
         android:layout_width="match_parent"
-        android:layout_height="150dp">
-
+        android:layout_height="330dp"
+        android:background="#eeeeee"
+        android:padding="0dp"
+        android:layout_margin="15dp">
     </ListView>
 
 
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:gravity="bottom"
-        android:layout_below="@+id/textView"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:layout_marginTop="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -126,6 +126,7 @@
                 android:text="EDIT COVER LETTER"
                 android:id="@+id/buttonEditCoverLetter"
                 android:layout_weight="1"
+                android:padding="@dimen/button_padding"
                 />
 
             <Button
@@ -134,6 +135,7 @@
                 android:text="EDIT JOBS"
                 android:id="@+id/buttonEditJobs"
                 android:layout_weight="1"
+                android:padding="@dimen/button_padding"
                 />
         </LinearLayout>
 
@@ -145,6 +147,7 @@
             android:layout_below="@id/buttonSplit"
             android:textColor="#ffffff"
             android:backgroundTint="#f79146"
+            android:padding="@dimen/button_padding"
             />
 
     </RelativeLayout>
