--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,6 @@
     tools:context="acad277.stanfield.ben.resumobile.MainActivity"
     >
 
-
     <!--testing github-->
     <RelativeLayout
         android:layout_width="match_parent"
@@ -47,6 +46,9 @@
             android:layout_height="wrap_content"
             android:text="SIGN IN"
             android:id="@+id/buttonSignIn"
+            android:padding="@dimen/button_padding"
+            android:backgroundTint="@color/colorOrange"
+            android:textColor="#ffffff"
             />
 
     </RelativeLayout>
