--- a/app/src/main/res/layout/activity_preferences.xml
+++ b/app/src/main/res/layout/activity_preferences.xml
@@ -17,7 +17,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:id="@+id/button_next" />
+        android:id="@+id/button_next"
+        android:padding="@dimen/button_padding"/>
 
     <TextView
         android:text="Select Preferences"
@@ -45,7 +46,8 @@
         android:layout_alignBottom="@+id/textView"
         android:layout_alignStart="@+id/textView3"
         android:layout_marginBottom="60dp"
-        android:id="@+id/Button_delete_Pic" />
+        android:id="@+id/Button_delete_Pic"
+        android:padding="@dimen/button_padding"/>
 
     <Button
         android:text="Choose from Gallery"
@@ -54,6 +56,7 @@
         android:id="@+id/Button_galleryPic"
         android:layout_alignBaseline="@+id/Button_delete_Pic"
         android:layout_alignBottom="@+id/Button_delete_Pic"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:padding="@dimen/button_padding"/>
 
 </RelativeLayout>
