--- a/app/src/main/res/layout/list_row_jobs.xml
+++ b/app/src/main/res/layout/list_row_jobs.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="@dimen/button_padding">
 
     <TextView
         android:text="Job Name"
-        android:layout_width="197dp"
+        android:textSize="20sp"
+        android:textColor="@color/colorOrange"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView_jobName" />
 
     <TextView
         android:text="Position Name"
-        android:layout_width="194dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView_position" />
 
     <TextView
         android:text="Job Description"
-        android:layout_width="198dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView_description" />
 </LinearLayout>
