--- a/app/src/main/res/layout/activity_linked_in_data.xml
+++ b/app/src/main/res/layout/activity_linked_in_data.xml
@@ -43,14 +43,14 @@
     <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:text="Education:"
+    android:text="Email:"
     android:id="@+id/textView1"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/TextView_Education"
-        android:text="LinkedIn_Education"
+        android:id="@+id/TextView_Email"
+        android:text="LinkedIn_Email"
         android:textColor="@android:color/holo_red_dark"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
