--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,6 +51,14 @@
             android:textColor="#ffffff"
             />
 
+        <Button
+            android:text="Override"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="72dp"
+            android:id="@+id/buttonOverride" />
+
 
     </RelativeLayout>
 
