--- a/app/src/main/res/layout/activity_linked_in_data.xml
+++ b/app/src/main/res/layout/activity_linked_in_data.xml
@@ -22,13 +22,6 @@
         android:gravity="center_horizontal"
         >
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="LinkedIn Data"
-            android:textSize="25sp"
-            />
-
 
     </RelativeLayout>
 
@@ -91,7 +84,35 @@
         android:id="@+id/TextView_coverLetter"
         android:text="Cover Letter Comes Here"/>
 
-    <Space
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Public Profile"
+            android:id="@+id/textView10"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/holo_red_dark"
+            android:id="@+id/TextView_publicProfile"
+            android:text="LinkedIn link comes here"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Headline"
+            android:id="@+id/textView11"/>
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/holo_red_dark"
+            android:id="@+id/TextView_Headline"
+            android:text="Headline text"/>
+
+
+        <Space
         android:layout_width="match_parent"
         android:layout_height="10dp" />
 
