--- a/app/src/main/res/layout/activity_linked_in_data.xml
+++ b/app/src/main/res/layout/activity_linked_in_data.xml
@@ -1,9 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<ScrollView android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical" android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -71,18 +66,25 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Cover Letter"
-        android:id="@+id/textView3"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Cover Letter"
+            android:id="@+id/textView3"/>
 
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:scrollbars="vertical">
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@android:color/holo_red_dark"
         android:id="@+id/TextView_coverLetter"
-        android:text="Cover Letter Comes Here"/>
+        android:text="Cover Letter Comes Here"
+        android:maxLines = "2"
+        />
+    </ScrollView>
 
         <TextView
             android:layout_width="wrap_content"
@@ -129,8 +131,8 @@
     <ListView
         android:id="@+id/ListView_jobs"
         android:layout_width="match_parent"
-        android:layout_height="330dp"
-        android:background="#eeeeee"
+        android:layout_height="300dp"
+        android:background="#e3e3e3"
         android:padding="0dp"
         android:layout_margin="15dp">
     </ListView>
@@ -186,5 +188,3 @@
 
 
 </LinearLayout>
-
-</ScrollView>
