--- a/app/src/main/res/layout/activity_resume_view.xml
+++ b/app/src/main/res/layout/activity_resume_view.xml
@@ -2,50 +2,65 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:layout_height="match_parent">
 
     <ImageView
-        android:layout_width="100px"
-        android:layout_height="100px"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:background="@color/colorOrange"
+        android:layout_marginBottom="-200dp"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:orientation="vertical">
+
+    <ImageView
+        android:layout_width="250dp"
+        android:layout_height="250dp"
         android:id="@+id/imageView_selectPicture"
-        android:background="@android:color/holo_blue_bright"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="24dp" />
+        android:layout_gravity="center"
+        android:scaleType="fitCenter"
+  />
 
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Name:"
-        android:id="@+id/textView"/>
-
-    <TextView
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/TextView_Name"
-        android:text="LinkedInName"
-        android:textColor="@android:color/holo_red_dark"
+        android:text="Ben Stanfield"
+        android:gravity="center"
+        android:textSize="25dp"
+        android:textColor="@color/colorPrimary"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Email:"
-        android:id="@+id/textView1"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/TextView_Email"
-        android:text="LinkedIn_Email"
-        android:textColor="@android:color/holo_red_dark"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#333333"
+            android:textSize="20dp"
+            android:gravity="center"
+            android:layout_marginTop="5dp"
+            android:id="@+id/TextView_Headline"
+            android:text="Headline text"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/TextView_Email"
+            android:text="LinkedIn_Email"
+            android:textSize="20dp"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/colorPrimaryDark"
+            android:layout_alignParentTop="true"
+            android:gravity="center"
+            android:layout_alignParentStart="true" />
 
 
     <TextView
@@ -87,20 +102,6 @@
         android:textColor="@android:color/holo_red_dark"
         android:id="@+id/TextView_publicProfile"
         android:text="LinkedIn link comes here"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Headline"
-        android:id="@+id/textView11"/>
-
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@android:color/holo_red_dark"
-        android:id="@+id/TextView_Headline"
-        android:text="Headline text"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -153,6 +154,6 @@
     <Space
         android:layout_width="match_parent"
         android:layout_height="20dp" />
-
+    </LinearLayout>
 
 </LinearLayout>
