--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#3f51b5"
+    android:gravity="center"
     tools:context="acad277.stanfield.ben.resumobile.MainActivity"
     >
 
@@ -15,21 +17,25 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
         android:layout_marginTop="15dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Welcome to Resumobile!"
-        android:textSize="25sp"
-        />
+    <ImageView
+        android:layout_width="350dp"
+        android:layout_height="150dp"
+        android:src="@drawable/resumobilelogo"
+        android:id="@+id/logo"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="-60dp"
+        android:layout_centerHorizontal="true"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sign in to your LinkedIn account to continue."
-        android:textSize="15sp"
+        android:textSize="23sp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/logo"
+        android:textColor="#ffffff"
         android:layout_marginTop="50dp" />
 
     </RelativeLayout>
@@ -50,14 +56,6 @@
             android:backgroundTint="@color/colorOrange"
             android:textColor="#ffffff"
             />
-
-        <Button
-            android:text="Override"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="72dp"
-            android:id="@+id/buttonOverride" />
 
 
     </RelativeLayout>
