--- a/app/src/main/res/layout/activity_resume_view.xml
+++ b/app/src/main/res/layout/activity_resume_view.xml
@@ -69,15 +69,6 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#333333"
-            android:textSize="20dp"
-            android:layout_marginTop="30dp"
-            android:id="@+id/TextView_coverLetter"
-            android:text="This will be my cover letter, if I ever write one! Really... how important *are* cover letters? Personally, I think they're a load of crap. Thanks for listening!"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:id="@+id/TextView_Email"
             android:text="LinkedIn_Email"
             android:textSize="20dp"
@@ -91,7 +82,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="JOB EXPERIENCE"
-        android:letterSpacing=".05"
+        android:letterSpacing=".025"
         android:textSize="20dp"
         android:id="@+id/textView4"/>
 
@@ -111,6 +102,15 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="WHERE I WORK"
+            android:letterSpacing=".025"
+            android:textSize="20dp"
+            android:layout_marginTop="20dp"
+            android:id="@+id/textView11"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/TextView_Country"
             android:text="LinkedIn_Location"
             android:textColor="#565656"
@@ -121,7 +121,10 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Public Profile"
+            android:text="LEARN MORE ABOUT ME"
+            android:letterSpacing=".025"
+            android:textSize="20dp"
+            android:layout_marginTop="20dp"
             android:id="@+id/textView10"/>
 
         <TextView
