--- a/app/src/main/res/layout/activity_preferences.xml
+++ b/app/src/main/res/layout/activity_preferences.xml
@@ -15,7 +15,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:gravity="bottom"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="10dp"
+        android:id="@+id/relativeLayout">
 
     <Button
         android:text="Select From Gallery"
@@ -38,15 +39,14 @@
     </RelativeLayout>
 
     <TextView
-        android:text="Select Picture"
+        android:text="This will appear as your 'profile picture' on the resume page, coming up next. You can always return to this page by going back."
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:textSize="25dp"
-        android:layout_alignParentStart="true"
+        android:textSize="20dp"
+        android:layout_below="@id/textView3"
         android:layout_marginStart="11dp"
         android:layout_marginTop="15dp"
-        android:id="@+id/textView3"/>
+        android:id="@+id/textView4"/>
 
 
     <ImageView
@@ -56,5 +56,14 @@
         android:layout_below="@+id/textView3"
         android:layout_alignParentStart="true"
         android:layout_marginTop="5dp" />
+
+    <TextView
+    android:text="Select Picture"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:textSize="25dp"
+    android:textColor="#333333"
+    android:id="@+id/textView3"
+    android:textStyle="normal|bold" />
 
 </RelativeLayout>
