--- a/app/src/main/res/layout/activity_cover__letter__edit.xml
+++ b/app/src/main/res/layout/activity_cover__letter__edit.xml
@@ -39,7 +39,7 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="SAVE COVER LETTER"
+            android:text="SAVE PERSONAL SUMMARY"
             android:id="@+id/buttonSaveCoverLetter"
             android:textColor="#ffffff"
             android:backgroundTint="#f79146"
