--- a/app/src/main/res/layout/activity_resume_view.xml
+++ b/app/src/main/res/layout/activity_resume_view.xml
@@ -57,28 +57,16 @@
             android:id="@+id/TextView_Headline"
             android:text="Headline text"/>
 
-
         <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="#333333"
         android:textSize="20dp"
             android:layout_marginTop="30dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="60dp"
+            android:gravity="center"
         android:id="@+id/TextView_coverLetter"
         android:text="This will be my cover letter, if I ever write one! Really... how important *are* cover letters? Personally, I think they're a load of crap. Thanks for listening!"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/TextView_Email"
-            android:text="LinkedIn_Email"
-            android:textSize="20dp"
-            android:layout_marginTop="10dp"
-            android:textColor="@color/colorPrimaryDark"
-            android:layout_alignParentTop="true"
-            android:gravity="center"
-            android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -86,6 +74,7 @@
         android:text="JOB EXPERIENCE"
         android:letterSpacing=".025"
         android:textSize="20dp"
+        android:textColor="#333333"
         android:id="@+id/textView4"
         android:textStyle="normal|bold" />
 
@@ -110,6 +99,7 @@
             android:textSize="20dp"
             android:layout_marginTop="20dp"
             android:id="@+id/textView11"
+            android:textColor="#333333"
             android:textStyle="normal|bold" />
 
         <TextView
@@ -128,6 +118,7 @@
             android:text="LEARN MORE ABOUT ME"
             android:letterSpacing=".025"
             android:textSize="20dp"
+            android:textColor="#333333"
             android:layout_marginTop="20dp"
             android:id="@+id/textView10"
             android:textStyle="normal|bold" />
@@ -135,9 +126,11 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/holo_red_dark"
+            android:textColor="#565656"
+            android:textSize="20dp"
             android:id="@+id/TextView_publicProfile"
-            android:text="LinkedIn link comes here"/>
+            android:text="LinkedIn link comes here"
+            android:layout_marginBottom="20dp"/>
 
 
     <RelativeLayout
@@ -176,9 +169,6 @@
 
     </RelativeLayout>
 
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="20dp" />
 
 
     </LinearLayout>
