--- a/app/src/main/res/layout/activity_resume_view.xml
+++ b/app/src/main/res/layout/activity_resume_view.xml
@@ -130,7 +130,9 @@
             android:textSize="20dp"
             android:id="@+id/TextView_publicProfile"
             android:text="LinkedIn link comes here"
+            android:autoLink="web"
             android:layout_marginBottom="20dp"/>
+
 
 
     <RelativeLayout
