--- a/app/src/main/res/layout/activity_job_edit.xml
+++ b/app/src/main/res/layout/activity_job_edit.xml
@@ -12,7 +12,7 @@
             android:layout_width="match_parent"
             android:id="@+id/ListView_jobs"
             android:layout_height="500dp"
-            android:background="#eeeeee"
+            android:background="#e3e3e3"
             android:padding="0dp"
             android:layout_margin="15dp">
         </ListView>
